truncated decimals in reviewpages, fixed spacing
- decimal truncated to first decimal place
-  spacing is even

--- a/frontend/src/pages/bathroom/BathroomPage.scss
+++ b/frontend/src/pages/bathroom/BathroomPage.scss
@@ -51,6 +51,7 @@ body {
 
   .overall {
     position: absolute;
+    align-content: space-evenly;
     top: 120px;
     left: 1050px;
     width: 315px;
@@ -82,6 +83,7 @@ body {
 
   .cleanliness {
     position: absolute;
+    align-content: space-evenly;
     top: 200px;
     left: 1065px;
     
@@ -93,6 +95,7 @@ body {
 
   .comfort {
     position: absolute;
+    align-content: space-evenly;
     top: 260px;
     left: 1065px;
 
@@ -104,6 +107,7 @@ body {
 
   .convenience {
     position: absolute;
+    align-content: space-evenly;
     top: 320px;
     left: 1065px;
 
@@ -115,6 +119,7 @@ body {
 
   .ameneties {
     position: absolute;
+    align-content: space-evenly;
     top: 380px;
     left: 1065px;
 
